<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ProfileActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            app:cardBackgroundColor="#D74F4FE1"
            app:cardElevation="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userimg"
                android:layout_width="90dp"
                android:layout_marginLeft="10dp"
                android:layout_height="90dp"
                android:src="@drawable/userimg"
                android:layout_marginStart="10dp" />

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verified_name"
                android:layout_marginTop="10dp"
                android:textSize="10sp"
                android:textStyle="normal"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/etfullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabin_simkhada"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|normal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="10sp"
                android:textStyle="normal"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/etphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9852051425"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|normal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="10sp"
                android:textStyle="normal"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/etaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sankhuwasabha"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|normal" />

            <androidx.cardview.widget.CardView
                android:id="@+id/driverprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="25dp">

                    <TextView

                        android:id="@+id/tvdriver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:text="Become a driver"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_driver"
                        app:drawableTint="@color/black" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_next"
                        app:tint="@color/black"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/todo" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <View

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="25dp">

                    <TextView

                        android:id="@+id/tveditprofile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:text="@string/edit_profile"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_edit"
                        app:drawableTint="@color/black" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_next"
                        app:tint="@color/black"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/todo" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <View

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="25dp">

                    <TextView

                        android:id="@+id/tvlogout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:text="@string/logout"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_logout"
                        app:drawableTint="@color/black" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_next"
                        app:tint="@color/black"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/todo" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="118dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_instagram"
            style="ImageButton"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_instagram" />

        <ImageView
            android:id="@+id/iv_twitter_sign"
            style="ImageButton"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_twitter_new" />

        <ImageView
            android:id="@+id/iv_facebook"
            style="ImageButton"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_facebook" />

    </LinearLayout>
</LinearLayout>
